<resources>
    <string name="app_name">Nazar</string>
    <string name="title_activity_home">home</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="leftarrow"><![CDATA[<]]></string>
    <string name="detect_components_at_the_real_time">Detect components in real-time with prediction percentage.</string>
    <string name="detection">Detection</string>
    <string name="start_detection">Detect objects</string>
    <string name="classification">Classification</string>
    <string name="identify_the_objects_nearby_you">Classify and identify object on the camera frame.</string>
    <string name="start_classification">Classify objects</string>
    <string name="about_us"> © Team Speks</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
</resources>
