<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:buttonTint="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true">

    <TextureView
        android:id="@+id/camPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="Image view for Camera Preview" />

    <ImageView
        android:id="@+id/colorOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="100"
        android:contentDescription="Image view for overlay color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="287dp"
                android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="match_parent"
                        android:layout_height="151dp"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/textView"
                        android:layout_marginTop="5dp"
                        android:foregroundGravity="top|center_vertical|fill_horizontal"
                        android:src="@drawable/icon_lg" />

                    <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="top|center_vertical"
                            android:text="@string/app_name"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textColor="@android:color/white"
                            android:textSize="42sp"
                            android:textStyle="bold"
                            android:typeface="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/logo"
                        android:layout_marginTop="10dp"
                        android:gravity="top|center_vertical"
                        android:text="Electronic Component Detection"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
            </RelativeLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="295dp"
            android:layout_below="@id/header"
            android:layout_gravity="bottom"
            android:background="@color/pagerBackground">

            <RelativeLayout
                android:id="@+id/pageOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sliderTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detection"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/sliderInfo"
                    android:layout_below="@id/sliderTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="20dp"
                    android:text="@string/detect_components_at_the_real_time"
                    android:textAlignment="center"
                    />
                <Button
                    android:id="@+id/startDetection"
                    android:layout_below="@id/sliderInfo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_detection"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/pageTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sliderTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/classification"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="DuplicateIds" />
                <TextView
                    android:id="@+id/sliderInfo"
                    android:layout_below="@id/sliderTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="20dp"
                    android:text="@string/identify_the_objects_nearby_you"
                    android:textAlignment="center"
                    tools:ignore="DuplicateIds" />
                <Button
                    android:id="@+id/startClassification"
                    android:layout_below="@id/sliderInfo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_classification"/>
            </RelativeLayout>
        </android.support.v4.view.ViewPager>

        <RadioGroup
            android:id="@+id/pageIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/pager"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="-10dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-10dp"
                android:layout_marginRight="-10dp"
                android:checked="true"
                android:scaleX="0.3"
                android:scaleY="0.3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-10dp"
                android:layout_marginRight="-10dp"
                android:scaleX="0.3"
                android:scaleY="0.3" />
        </RadioGroup>

    </RelativeLayout>
</FrameLayout>